<resources>
    <string name="app_name">比比部落(用户)</string>
    <string name="app_back">在按一次退出客戶端</string>

    <string name="home_join">加入部落</string>
    <string name="home_tip">附近有102个部落</string>
    <string name="home_regist">先注册看看？</string>
    <string name="home_club_video">部落视频</string>

    <!--login页面-->
    <string name="mobile_phone">请输入您的手机号码</string>
    <string name="verify_code">请输入您的短信验证码</string>
    <string name="get_vetify_code">发送验证码</string>

    <!--支付页面-->
    <string name="pay_detail">支付详情</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_fail">支付失败</string>
    <string name="pay_comfirm">立即支付</string>
    <string name="edit_info">填写资料</string>
    <string name="order_club">参加的部落:</string>
    <string name="order_money">金额:</string>
    <string name="order_date">日期:</string>
    <string name="order_no">订单号:</string>
    <string name="login_out">注销</string>
    <string name="finsh_regist">完成注册</string>

    <!--个人信息-->
    <string name="info_no">原始人编号</string>
    <string name="info_name">姓名</string>
    <string name="info_sex">性别</string>
    <string name="info_age">出生年月</string>
    <string name="info_comfirm">确认保存</string>


    <string name="sign_record">签到记录</string>
    <string name="video_list">视频列表</string>
    <string name="match_mine">我的赛事</string>
    <string name="match_other">其他赛事</string>
    <string name="once_join">立即报名</string>
    <string name="cancel_join">取消报名</string>
    <string name="comfirm">确定</string>
    <string name="comfirm_title">原始人信息</string>
    <string name="apply_success">报名完成</string>

    <string name="other_match">其他赛事</string>
    <string name="recent_match">近期赛事</string>
    <string name="next_match_title">距离下次赛事</string>
    <string name="find_info">查看详情</string>

    <string name="select_video">选择视频</string>
    <string name="video_name">视频名称</string>
    <string name="video_club">所属部落</string>
    <string name="comfirm_up">确定上传</string>
    <string name="comfirm_del">确认删除</string>
    <string name="up_video_text">上传视频</string>
    <string name="up_video_success">上传成功</string>
    <string name="up_video_fail">上传失败</string>
    <string name="my_video">我的视频</string>
    <string name="del_video">删除视频</string>


    <string name="nav">一键导航</string>
    <string name="medail_detail">勋章详情</string>
    <string name="cancel_match_tip">请输入您取消比赛的原因</string>
    <string name="cancel_match">取消报名</string>
    <string name="cancel_match_success">取消成功</string>
    <string name="cancel_match_fail">取消失败</string>

    <string name="del_success">删除成功</string>
    <string name="del_fail">删除失败</string>

    <string name="update_success">修改成功</string>
    <string name="update_fail">修改失败</string>
    <string name="update_info">修改信息</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_cancel_match">CancelMatchActivity</string>


</resources>
