<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/pay_success_bg"
    android:orientation="vertical">


    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

    <include
        android:id="@+id/framelayout_top"
        layout="@layout/top_view" />

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="688px"
        android:layout_height="780px"
        android:layout_below="@+id/framelayout_top"
        android:layout_centerHorizontal="true"
        android:background="@mipmap/success_bg">


        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100px"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="70px"
                android:layout_height="60px"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/view_margin_30"
                android:layout_marginLeft="@dimen/view_margin_30"
                android:layout_marginTop="@dimen/view_margin_30"
                android:src="@mipmap/scan_success" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/view_margin_30"
                android:layout_marginLeft="@dimen/view_margin_15"
                android:layout_marginRight="@dimen/view_margin_30"
                android:layout_marginTop="@dimen/view_margin_30"
                android:text="@string/pay_success"
                android:textColor="@color/pay_success_text"
                android:textSize="@dimen/view_text_60" />
        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/linear_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/view_margin_30"
            android:layout_marginLeft="@dimen/view_margin_60"
            android:layout_marginRight="@dimen/view_margin_60">


            <com.zhy.autolayout.AutoRelativeLayout
                 android:layout_marginTop="@dimen/view_margin_30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/view_margin_15"
                    android:text="@string/order_club"
                    android:textColor="@color/home_text"
                    android:textSize="@dimen/text_button_30" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:gravity="right"
                    android:maxLines="1"
                    android:text="广州比比部落"
                    android:textColor="@color/homt_title_black"
                    android:textSize="@dimen/text_button_30" />
            </com.zhy.autolayout.AutoRelativeLayout>

            <com.zhy.autolayout.AutoRelativeLayout
                android:layout_marginTop="@dimen/view_margin_30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/view_margin_15"
                    android:text="@string/order_money"
                    android:textColor="@color/home_text"
                    android:textSize="@dimen/text_button_30" />

                <TextView

                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:gravity="right"
                    android:maxLines="1"
                    android:text="3000/半年"
                    android:textColor="@color/homt_title_black"
                    android:textSize="@dimen/text_button_30" />
            </com.zhy.autolayout.AutoRelativeLayout>

            <com.zhy.autolayout.AutoRelativeLayout
                android:layout_marginTop="@dimen/view_margin_30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/view_margin_15"
                    android:text="@string/order_date"
                    android:textColor="@color/home_text"
                    android:textSize="@dimen/text_button_30" />

                <TextView

                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:gravity="right"
                    android:maxLines="1"
                    android:text="2017-8-12"
                    android:textColor="@color/homt_title_black"
                    android:textSize="@dimen/text_button_30" />
            </com.zhy.autolayout.AutoRelativeLayout>

            <com.zhy.autolayout.AutoRelativeLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_margin_30"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/view_margin_15"
                    android:text="@string/order_no"
                    android:textColor="@color/home_text"
                    android:textSize="@dimen/text_button_30" />

                <TextView
                    android:id="@+id/et_verify_code"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:gravity="right"
                    android:maxLines="1"
                    android:text="12345678"
                    android:textColor="@color/homt_title_black"
                    android:textSize="@dimen/text_button_30" />
            </com.zhy.autolayout.AutoRelativeLayout>
        </com.zhy.autolayout.AutoLinearLayout>
        <TextView
            android:layout_above="@+id/linear_order"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="订单详情"
            android:layout_marginLeft="@dimen/view_button_90"
            android:textColor="@color/homt_title_black"
            android:textSize="@dimen/text_button_30" />

    </com.zhy.autolayout.AutoRelativeLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="fill_parent"
        android:layout_height="110px"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/view_margin_60"
        android:layout_marginLeft="100px"
        android:layout_marginRight="100px"
        android:background="@mipmap/btn_login"
        android:gravity="center"
        android:paddingBottom="20px"
        android:text="@string/edit_info"
        android:textColor="@color/login_withe"
        android:textSize="40px" />

</com.zhy.autolayout.AutoRelativeLayout>
    </com.zhy.autolayout.AutoLinearLayout>
